# cstrike-hacking

./: .gitignore  CMakeLists.txt  README.md
Nikooo777/: BaseClient.h  CBasePlayer.h  CCSPlayer.h  CLocal.h  ClientMode.cpp  ClientMode.h  ClientState.h  Helper.cpp  Helper.h  Source.cpp  UserCmd.h  aimbot.cpp  aimbot.h  bhop.cpp  bhop.h  common.h  hack.cpp  hack.h  misc.h  norecoil.cpp  norecoil.h  offsets.h  padding.h  playerbase.h  triggerbot.cpp  triggerbot.h  vector.cpp  vector.h
Nikooo777/mem/: mem.cpp  mem.h
Nikooo777/sdk/: sdk.cpp  sdk.h
